# vts-control-server

./: .env.example  AGENTS.md  README.md  main.py  pyproject.toml
.secrets/: mock.md
app/: main.py  settings.py
app/routes/: vts_debug.py  ws.py
app/vts/: __init__.py  controller.py  mapping.py
docs/: structure.md  vts-api-overview.md
scripts/: probe_hotkey.py
