[project]
name = "vts-control-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyvts>=0.3.3",
    "structlog>=25.5.0",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.40.0",
]
